fix the horizontal scrolling bar on tasks page

--- a/checkpoint/src/styles/tasks.css
+++ b/checkpoint/src/styles/tasks.css
@@ -1,13 +1,14 @@
-.flex{
+.tasks-everything-box{
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
-    display: block;
-    height: 45%;
-
-
+    padding: 5px;
+    margin-top: 150px;
+    height: 100%;
+    background-color: #285A8f;
+    border-radius: 5px;
+    width: 75%;
 }
 ul, li {
     list-style-type: none;
@@ -18,24 +19,33 @@ ul, li {
 
 header{
     text-align: center;
-    padding-top: 2.5%;
+    padding: 1.5%;
     text-shadow: -4px 5px 11px rgba(0, 0, 0, 0.6);
     color: #000000;
-    font-size: 3vw;
+    font-size: 30px;
 
 }
+
 
 body{
     background-color: #dbe6fbff !important;
 }
-/*when changed to button it works*/
-Button{ 
+.to-do-box, .overdue-box{
+    position: relative;
+    background-color: rgb(196, 196, 228);
+    padding: 10px;
+    display: block;
+    height: 400px;
+    width: 800px;
+    margin:10px;
+}
+.custom-button { 
     background-color: #0a074aff !important;
-    color: white;
-    padding: 15px 32px;
-    border-radius: 15% !important;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
-    display: inline-block;
+    color: white !important;
+    padding: 15px 32px !important;
+    border-radius: 5px !important;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2) !important;
+    display: inline-block !important;
 }
 
 .create-task-input-container {
@@ -57,7 +67,7 @@ Button{
 
 .tasks-list-container {
     text-align: center;
-    width: auto;
+    width: 100%;
     height: auto;
     margin: 0 auto;
     padding: 0.5rem;
@@ -67,9 +77,17 @@ Button{
 
 .tasks-list {
     text-align: center;
-    max-width: 250px;
     padding: 1rem;
     display:inline;
+    width: 65%;
+}
+
+.tasks-flex{
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
 }
 
 .task-card {
@@ -84,14 +102,17 @@ Button{
 }
 
 .add-task {
-    text-align: center;  
+    text-align: center;
+    width: 10rem;
+    height: 5rem;
+    margin-right: 5px;
     display: inline !important;
   
 }
 
 .list-title {
     font-size: 1.6rem;
-    padding-top: 1.25rem;
+    padding-top: 4rem;
 }
 
 .task-time {
@@ -107,4 +128,15 @@ Button{
 .delete-button {
     text-align: center;
 }
+
+.custom-button-hide {
+    visibility: hidden;
+    background-color: #0a074aff !important;
+    color: white !important;
+    padding: 15px 32px !important;
+    border-radius: 5px !important;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2) !important;
+    display: inline-block !important;
+}
+
 
